--- a/client/src/pages/ErrorBoundaryPage/style.scss
+++ b/client/src/pages/ErrorBoundaryPage/style.scss
@@ -2,25 +2,25 @@
   &__container {
     width: 100vw;
     height: 100vh;
-    background-color: #f3f3f3;
+    background-color: #fafafa;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    justify-content: start;
   }
 
   &__erBlock {
-    width: 50%;
-    padding: 15px;
+    padding: 10px;
+    margin: 5% 5% 0 5%;
     border: 4px solid rgba(227, 120, 120, 0.71);
 
     & h1, p {
-      margin-bottom: 10px;
-      font-size: 18px;
+      margin-bottom: 7px;
+      font-size: 10px;
     }
 
     & h1 {
       text-align: center;
-      font-size: 25px;
+      font-size: 20px;
     }
   }
 }
