--- a/client/src/components/Header/style.scss
+++ b/client/src/components/Header/style.scss
@@ -1,4 +1,5 @@
 .navbar {
+  font-family: 'Helvetica Neue', sans-serif;
   height: 80px;
   display: flex;
   justify-content: flex-end;
@@ -7,6 +8,9 @@
 
   &-logo {
     margin: 0 auto;
+    font-size: 25px;
+    font-weight: 900;
+
   }
 }
 
