--- a/client/src/components/Header/style.scss
+++ b/client/src/components/Header/style.scss
@@ -1,84 +1,109 @@
 .navbar {
-  font-family: 'Helvetica Neue', sans-serif;
   height: 80px;
   display: flex;
-  justify-content: flex-end;
+  position: relative;
+  justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid #242424;
 
   &-logo {
-    margin: 0 auto;
+
     font-size: 25px;
     font-weight: 900;
-
+    justify-self: flex-start;
+    margin-left: 20px;
   }
-}
-
-.menu-bars {
-  margin-right: 2rem;
-  font-size: 2rem;
-  background: none;
-  color: #242424;
 }
 
 .nav-menu {
-  background-color: #fff;
-  width: 250px;
-  height: 100vh;
   display: flex;
-  justify-content: center;
-  position: fixed;
-  top: 0;
+  flex-direction: column;
+  width: 240px;
+  height: 500px;
+  top: 80px;
   right: -100%;
-  transition: 850ms;
+  opacity: 1;
+  transition: all .5s ease;
   border-left: 1px solid #242424;
-
-  &-items {
-    width: 100%;
-    padding: 0 0;
-  }
-
-  &-toggle {
-    background-color: #fff;
-    width: 100%;
-    height: 50px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
+  position: absolute;
 
   &-text {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 8px 0 8px 16px;
-    list-style: none;
-    height: 60px;
+    text-align: center;
+    padding: 2rem;
+    display: table;
   }
 
   &-text a {
     text-decoration: none;
     color: #242424;
-    font-size: 18px;
-    width: 95%;
-    height: 100%;
     display: flex;
     align-items: center;
-    padding: 0 16px;
-    border-radius: 4px;
-  }
-
-  &-text a:hover {
-    background-color: #03ADD2;
+    & svg{
+      margin-right: 10px;
+    }
   }
 }
 
-.nav-menu.active {
+.active {
+  background-color: #ffff;
   right: 0;
-  transition: 350ms;
+  opacity: 1;
+  transition: all .5s ease;
+  z-index: 1;
 }
 
-span {
-  margin-left: 16px;
+.menu-icon {
+  display: block;
+  transform: translate(-100% 60%);
+  font-size: 1.8rem;
+  margin-right: 1rem;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 992px) {
+  .nav-menu {
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+    grid-gap: 10px;
+    list-style: none;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    width: auto;
+    position: static;
+    border-left: none;
+
+    &-items {
+      width: 100%;
+      padding: 0 0;
+    }
+
+    &-text {
+      color: #242424;
+      text-decoration: none;
+      padding: 0.5rem 1rem;
+    }
+
+    &-text a {
+      font-size: 18px;
+      width: 95%;
+      height: 100%;
+      border-radius: 4px;
+    }
+
+    &-text a:hover {
+      color: #03ADD2;
+      transition: all .2s ease-out;
+    }
+
+    &-text a:focus {
+      color: #03ADD2;
+      transition: all .2s ease-out;
+    }
+  }
+  .menu-icon {
+    display: none;
+  }
 }
 
