--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,4 +1,13 @@
-.app{
+.app {
   width: 100%;
   height: 100%;
+}
+
+.app-container {
+  width: 100%;
+}
+
+.content-container {
+  max-width: 1280px;
+  margin: 0 auto;
 }
